--- a/style.css
+++ b/style.css
@@ -137,6 +137,13 @@ width: 50%;
 color: orange;
 }
 
+.form-control{
+    outline: none !important;
+}
+.form-control:focus{
+        border: 1px solid rgba(255, 0, 0, 0.138) !important;
+        box-shadow: 6px -2px 0 0.25rem rgba(1, 7, 16, 0.03) !important;
+}
 @media  (max-width:576px){
         
 .mainBar > li > a:hover {
